--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="An app to learn Fetch API using TV Maze API."
     />
-    <title>TV shows search</title>
+    <title>Busca de TV shows</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -18,13 +18,13 @@
   <body>
     <div id="app">
       <div id="bar">
-        <h1>📺 TV shows search</h1>
+        <h1>📺 Busca de filmes e séries </h1>
         <form id="search-form">
           <input
             type="text"
             id="query"
             name="query"
-            placeholder="type a show name"
+            placeholder="Digite um nome de TV Show"
           />
           <button>search</button>
         </form>
@@ -33,7 +33,7 @@
         <p id="message"></p>
         <ul id="shows"></ul>
       </div>
-      <p>by NOME DO ALUNO</p>
+      <p> by Juliane Amorim  </p>
     </div>
     <script src="index.js"></script>
   </body>
